# conway-game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: constans.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp
